# kes

./: Cargo.toml  README.md  cspell.json
example/: README.md  kes.toml
example/posts/: my-cool-post.md
example/templates/: 404.html
src/: config.rs  lib.rs  logging.rs  posts.rs  templates.rs
templates/: 404.html  home.html  post.html
