[package]
name = "kes"
version = "0.1.0"
edition = "2021"
authors = ["Robb Currall <rlcurrall@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.2.1"
clap = { version = "4.0.18", features = ["derive"] }
config = "0.13.2"
glob = "0.3.0"
lazy_static = "1.4.0"
pulldown-cmark = "0.9.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tera = "1.17.1"
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
